@@ -155,6 +155,7 @@ var app = new Vue({
         window.addEventListener('popstate', function(event) {
             if (event.state && event.state.noBackExitsApp) {
                 window.history.pushState({ noBackExitsApp: true }, '');
+                bus.$emit('navigateBack');
             }
         }, false);
 
@@ -188,6 +189,14 @@ var app = new Vue({
 
         bus.$on('changeLayout', function(layout) {
             this.setLayout(layout);
+        }.bind(this));
+
+        bus.$on('navigateBack', function() {
+            if (this.$store.state.openDialogs.length>0 || this.$store.state.visibleMenus.size>0) {
+                bus.$emit('esc');
+            } else if (!this.$store.state.desktopLayout && this.$store.state.page=='browse') {
+                bus.$emit('nav', 'browse', false);
+            }
         }.bind(this));
     },
     computed: {
